--- a/main.html
+++ b/main.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/reset.css"> 
+	<link rel="stylesheet" href="css/main.css"> 
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
-<p> Click | Ryu fires hadouken <br> <br> X | Ryu stays cool</p>
+<p> mouse CLICK to fire hadouken <br> <br> X for cool mode</p>
 <div class = "main">
 	
 	<div class="ryu">
@@ -26,6 +26,8 @@
 	
 
 <audio id="hadouken-sound" src="sound/hadouken.mp3">
+
+<audio id="addicted-sound" src="sound/addicted.mp3">
 
 
 </body>
