--- a/main.html
+++ b/main.html
@@ -9,19 +9,25 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
-	<p> mouse CLICK to fire hadouken <br> <br> X for cool mode</p>
-	<div class = "main">
-		
-		<div class="ryu">
-	  		<div class="ryu-still"></div>
-	  		<div class="ryu-ready"></div>
-	  		<div class="ryu-throwing"></div>
-	  		<div class="ryu-cool"></div>
-		</div>
+<p> mouse CLICK to fire hadouken <br> <br> X for cool mode</p>
+<div class = "main">
+	
+	<div class="ryu">
+  		<div class="ryu-still"></div>
+  		<div class="ryu-ready"></div>
+  		<div class="ryu-throwing"></div>
+  		<div class="ryu-cool"></div>
+	</div>
 
-		<div class="hadouken"></div>
-		
-	</div>	
+	<div class="hadouken"></div>
+	
+</div>	
+	
+
+<audio id="hadouken-sound" src="sound/hadouken.mp3">
+
+<audio id="addicted-sound" src="sound/addicted.mp3">
+
 
 </body>
 </html>
